--- a/src/style.scss
+++ b/src/style.scss
@@ -151,6 +151,17 @@ span {
     max-width: 500px;
     border: 1px solid #d6d6d6;
     background: white;
+    a {
+        text-decoration: none;
+        color: black;
+    }
+}
+iframe { /* ios iframe bug fix */
+    width: 0;
+    height: 0;
+
+    min-width: 100%;
+    min-height: 100%; 
 }
 footer {
     display: flex;
