--- a/src/style.css
+++ b/src/style.css
@@ -32,8 +32,10 @@ body {
   -ms-flex-align: center;
   align-items: center;
   width: 100%;
+  height: 100%;
   min-height: 100%;
   padding: 140px 7%;
+  overflow: hidden;
   border-bottom: 1px solid #d6d6d6; }
   @media only screen and (max-width: 1500px) {
     #section {
@@ -51,7 +53,7 @@ body {
       height: 700px; } }
 
 img.logo {
-  width: 208px; }
+  min-width: 208px; }
 
 img.nadpis-titulka {
   width: 100%;
@@ -109,7 +111,10 @@ img.podpis {
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
-    margin: auto; }
+    margin: auto;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
     @media only screen and (max-width: 1300px) {
       .col div {
         width: 100%;
@@ -203,6 +208,8 @@ span {
   margin: 20px;
   padding: 10px;
   max-width: 500px;
+  min-height: 1px;
+  /* IE bugfix for not calculating dynamic height */
   border: 1px solid #d6d6d6;
   background: white; }
   span a {
