--- a/src/style.scss
+++ b/src/style.scss
@@ -23,8 +23,10 @@ body {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: 100%;
     min-height: 100%;
     padding: 140px 7%;
+    overflow: hidden;
     @media only screen and (max-width: 1500px) {
         padding: 7%;
     }
@@ -41,7 +43,7 @@ body {
     }
 }
 img {
-    &.logo {width: 208px;}
+    &.logo {min-width: 208px;}
     &.nadpis-titulka {width: 100%; max-width: 1500px;}
     &.scroll {width: 50px; padding-top: 20px;}
     &.nadpis {max-height: 150px;}
@@ -84,6 +86,7 @@ img {
         display: flex;
         flex-direction: row;
         margin: auto;
+        justify-content: center;
         @media only screen and (max-width: 1300px) {
             width: 100%;
             flex-direction: column;
@@ -149,6 +152,7 @@ span {
     margin: 20px;
     padding: 10px;
     max-width: 500px;
+    min-height: 1px; /* IE bugfix for not calculating dynamic height */
     border: 1px solid #d6d6d6;
     background: white;
     a {
